--- a/02_practice_with_r.qmd
+++ b/02_practice_with_r.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Introduction to R and Basic Data Analysis"
-subtitle: "ACTEX Learning - Lesson 1.2"
+subtitle: "ACTEX Learning - AFDP: R Session 1.2"
 author: "Federica Gazzelloni and Farid Flici"
 date: "2024/10/03"
 format: 
@@ -12,23 +12,23 @@ execute:
   message: false
 ---
 
+```{r}
+#| echo: false
+library(ggplot2)
+book_theme <- theme_minimal() + 
+  theme(plot.title=element_text(face="bold"))
+ggplot2::theme_set(book_theme)
+```
+
 # Getting into Practice with R
 
-`Data manipulation` is a fundamental skill in the field of `data science`. It involves the process of `transforming`, `organizing`, and `cleaning` raw data to make it suitable for analysis and visualization. `R` can be used in tasks such as determining `premium rates` for mortality and morbidity products, `evaluating the probability` of financial loss or return, providing business `risk consulting`, and `planning` for pensions and retirement. In essence, actuaries handle any responsibilities that involve risk modeling, whether in insurance, financial planning, or sectors like energy and the environment.
+`Data manipulation` is a fundamental skill in the field of `data science`. It involves the process of `transforming`, `organizing`, and `cleaning` raw data to make it suitable for analysis and visualization. `R` can be used in tasks such as determining `premium rates` for mortality and morbidity products, `evaluating the probability` of financial loss or return, providing business `risk consulting`, and `planning` for pensions and retirement. In essence, `R` is a powerful tool for actuaries and data scientists to perform complex data analysis and modeling.
 
 # R Packages
 
-R packages are collections of functions, data, and compiled code in a well-defined format. They are stored in a directory called a library. R comes with a standard set of packages, but others are available for download from CRAN (Comprehensive R Archive Network) or other repositories.
+R packages are collections of functions, data, and compiled code in a well-defined format. They are stored in a directory called `library`. A fresh R installation includes a set of packages that are loaded automatically when R starts. These packages are referred to as the base packages. The base packages are always available, and they do not need to be loaded explicitly.
 
-A fresh R installation includes a set of packages that are loaded automatically when R starts. These packages are referred to as the base packages. The base packages are always available, and they do not need to be loaded explicitly.
-
-To install a package, use the `install.packages("")` function. To load a package, use the `library()` function.
-
-# R Functions
-
-R is a functional programming language, which means that it is based on functions. Functions are blocks of code that perform a specific task. They take input, process it, and return output.
-
-There are two types of functions in R: `base functions` and `user-defined functions`. Base functions are built into R, while user-defined functions are created by the user.
+Others packages are available for download from [CRAN (Comprehensive R Archive Network)](https://cran.r-project.org/web/packages/available_packages_by_name.html) or other repositories, such as [GitHub](https://github.com/) usually for package development versions. To install a package which is stored on CRAN, we can use the `install.packages("")` function. To load a package, use the `library()` function.
 
 ## Base Functions
 
@@ -121,13 +121,19 @@ A <- P * (1 + r * t)
 A
 ```
 
+# R Functions
+
+R is a functional programming language, which means that it is based on functions. Functions are blocks of code that perform a specific task. They take input, process it, and return output.
+
+There are two types of functions in R: `base functions` and `user-defined functions`. Base functions are built into R, while user-defined functions are created by the user.
+
 # Essential Data Preparation Techniques: Wrangling, Manipulation, and Transformation
 
 Data wrangling, manipulation, and transformation are essential techniques for preparing and refining data for analysis.
 
--   Data wrangling involves cleaning raw data—handling missing values, correcting errors, and merging datasets—to ensure accuracy and consistency.
--   Data manipulation builds on this by adjusting, filtering, and transforming specific aspects of the data, such as selecting relevant columns, filtering rows based on conditions, and creating new variables.
--   Data transformation goes deeper by reshaping the structure of the data (e.g., converting between wide and long formats), normalizing values, or applying mathematical operations like log transformations to ensure that the data is suitable for complex analysis or modeling.
+-   **Data wrangling** involves cleaning raw data—handling missing values, correcting errors, and merging datasets—to ensure accuracy and consistency.
+-   **Data manipulation** builds on this by adjusting, filtering, and transforming specific aspects of the data, such as selecting relevant columns, filtering rows based on conditions, and creating new variables.
+-   **Data transformation** goes deeper by reshaping the structure of the data (e.g., converting between wide and long formats), normalizing values, or applying mathematical operations like log transformations to ensure that the data is suitable for complex analysis or modeling.
 
 These processes, often performed using R packages like dplyr, tidyr, and data.table, are crucial steps in converting raw, disorganized data into meaningful insights. Together, they form the foundation for effective data analytics, which uses cleaned and well-structured data to perform descriptive, predictive, and inferential analyses.
 
@@ -307,7 +313,7 @@ The two datasets have a common variable, `PolicyID`, which can be used as a key 
 
 Something to notice is that `PolicyID` is stored as a character variable in the `freMTPLfreq` dataset and as an integer variable in the `freMTPLsev` dataset. So, in order to proceed with merging the two sets, we need to transform the `PolicyID` variable in the `freMTPLfreq` dataset to an integer type.
 
-### Mutate and Merge Data
+## Mutate and Merge Data
 
 The `mutate()` function is used to create a new variable, or to make a modification to an existing one, as in this case, to transform `PolicyID` as an integer type.
 
@@ -348,15 +354,27 @@ claims_data_raw %>%
   summary()
 ```
 
-### Filter and Summarize Data
+## Filter and Summarize Data
 
 We can filter the data to include only claims greater than 1000 and summarize the total claims by year. The `group_by()` function is used to group the data by a specific variable, and the `reframe()` function is used to calculate summary statistics for each group.
 
 ```{r}
 # Filter data for claims greater than 1000
 high_claims <- claims_data_raw %>% filter(ClaimAmount > 1000)
+```
 
-# Summarize total claims by year
+```{r}
+ggplot(data = high_claims, 
+       aes(x = factor(DriverAge), y = ClaimAmount)) +
+  geom_col() +
+  labs(title = "High Claims by Driver Age",
+       x = "Driver Age",
+       y = "Claim Amount")
+```
+
+## Grouping and Summarize total claims by DriverAge
+
+```{r}
 claims_summary <- claims_data_raw %>%
   group_by(DriverAge) %>%
   reframe(TotalClaims = sum(ClaimAmount))
@@ -364,13 +382,12 @@ claims_summary <- claims_data_raw %>%
 claims_summary
 ```
 
-## Visualize Claims Amount by Age
-
 ```{r}
 ggplot(data = claims_summary, 
-       aes(x = DriverAge, y = TotalClaims)) +
+       aes(x = factor(DriverAge), y = TotalClaims)) +
+  # fix the bar plot
   geom_col() +
-  labs(title = "High Claims by Driver Age",
+  labs(title = "Total Claims by Driver Age",
        x = "Driver Age",
        y = "Claim Amount")
 ```
@@ -407,9 +424,7 @@ claims_data <- claims_data %>%
 claims_data %>% dim()
 ```
 
-### Select Data
-
-`select()` is another function from the `dplyr` package that is used to select specific columns from a dataset. The `head()` function is used to display the first few rows of the dataset.
+To select specific columns from a dataset we can use the `select()` function from the `dplyr` package. Then, the `head()` function is used to display the first few rows of the dataset.
 
 ```{r}
 # View the results
@@ -428,7 +443,7 @@ claims_data %>%
 ggplot(data = claims_data %>% filter(Premium < 10000), 
        aes(x = projected_claims, y = Premium)) +
   # Add points
-  geom_point(shape = ".") +
+  geom_point() +
   # Add a smooth line
   geom_smooth()+
   labs(title = "Projected Claims vs Premium",
@@ -444,7 +459,7 @@ Let's check the range of the `DriverAge` variable and group the data by age to c
 range(claims_data$DriverAge)
 ```
 
-Group the data by 5 years age group and calculate the average premium for each age group using the `cut()` function to create age groups.
+Finally, we group the data by 5 years age group and calculate the average premium for each age group using the `cut()` function to create age groups.
 
 ```{r}
 claims_data %>%
@@ -477,6 +492,16 @@ claims_data_ag %>%
        y = "Average Premium")
 ```
 
-# Conclusion
+# Summary
 
 In this lesson, we have introduced the basics of R programming, including functions, data types, and syntax. We have explored data manipulation techniques using base R functions and the `tidyverse` set of packages. We have also worked with simulated and real-world claims data to perform data wrangling, manipulation, and visualization.
+
+R is a powerful tool for actuaries and data scientists, offering a wide range of functions and packages for data analysis, modeling, and visualization. By mastering R programming, actuaries can enhance their analytical skills, improve decision-making, and drive innovation in the insurance industry.
+
+In the next lesson, we will delve deeper into data analysis and modeling techniques, exploring predictive modeling using R.
+
+# Resources
+
+-   Charpentier, A., & Kaas, R. (2014). [Computational Actuarial Science with R. CRC Press](https://www.amazon.it/Computational-Actuarial-Science-Arthur-Charpentier/dp/1466592591)
+-   Wickham, H. (2016). [ggplot2: Elegant Graphics for Data Analysis](https://ggplot2-book.org/)
+-   Tidyverse (2021). [Tidyverse: Easily Install and Load the 'Tidyverse'](https://www.tidyverse.org/)
