--- a/index.qmd
+++ b/index.qmd
@@ -1,77 +1,77 @@
 ---
-title: "Introduction to R and Basic Data Analysis"
-description: "Actuarial Faculty Development Program 2024 - ACTEX Learning"
-format: 
+title: "Introduction to R and Basic Data Analysis for Actuarial Science"
+description: "Actuarial Faculty Development Program 2025 - ACTEX Learning"
+date: "2025/09/02"
+format:
   html:
     toc: true
 ---
 
-**This course is designed to introduce actuarial students to the R programming language**
+**This course is designed to equip participants with a structured approach to learn essential R skills required for actuarial exams**
 
 ## Instructors
 
 ::::: columns
 ::: column
--   Name: **Federica Gazzelloni, IIA**
--   Email: [fede.gazzelloni\@gmail.com](mailto:fede.gazzelloni@gmail.com){.email}
--   Website: [federicagazzelloni.com](https://federicagazzelloni.com)
--   LinkedIn: [federicagazzelloni](https://www.linkedin.com/in/federicagazzelloni/)
+-   **Federica Gazzelloni, IIA**
+    -   Email: [fede.gazzelloni\@gmail.com](mailto:fede.gazzelloni@gmail.com){.email}
+    -   Website: [federicagazzelloni.com](https://federicagazzelloni.com)
+    -   LinkedIn: [federicagazzelloni](https://www.linkedin.com/in/federicagazzelloni/)
 :::
 
 ::: column
--   Name: **Farid Flici, PHD**
--   Email: [farid.flici\@gmail.com](mailto:farid.flici@gmail.com){.email}
--   Website: [farid-flici.github.io](https://farid-flici.github.io/)
--   LinkedIn: [faridflici](https://www.linkedin.com/in/farid-flici-659a7625/)
+-   **Farid Flici, PHD**
+    -   Email: [farid.flici\@gmail.com](mailto:farid.flici@gmail.com){.email}
+    -   Website: [farid-flici.github.io](https://farid-flici.github.io/)
+    -   LinkedIn: [faridflici](https://www.linkedin.com/in/farid-flici-659a7625/)
 :::
+:::::
 
 ## Course Description
 
-This course is designed to equip you with the technical skills to use R in actuarial science. You’ll gain the necessary knowledge to succeed in the rapidly evolving world of risk analysis, insurance, and finance. Throughout the program, you’ll discover the power of R, one of the most widely-used programming languages in statistics and actuarial science, for performing essential tasks like pricing, reserving, and risk management.
+This course equips participants with practical skills for using R in actuarial science. It focuses on the technical competencies needed for actuarial exams that incorporate data analysis and modeling, such as Predictive Analytics and Statistics for Risk Modeling (SRM). The session emphasizes hands-on, exam-relevant techniques that can be integrated into academic curricula or review programs.
 
-Whether you’re just starting out or looking to enhance your current skill set, this course offers a comprehensive approach to understanding actuarial concepts, from data manipulation and visualization to advanced statistical modeling. Our lessons will take you step-by-step through real-world applications, providing hands-on experience with the types of challenges actuaries face every day.
+Participants will learn efficient methods for importing and manipulating data, applying actuarial functions, and implementing statistical models frequently tested in actuarial contexts. Topics include generalized linear models (GLMs) for claim frequency and severity, predictive modeling techniques such as clustering and regularization, as well as visualization and reporting strategies to enhance clarity and reproducibility.
 
-## Learning Objectives
+The course includes practical exercises and adaptable templates, ensuring students are well-prepared for R-based actuarial assessments.
 
-By the end of this course, you’ll be able to:
+Designed for participants with little or no programming experience, this course offers a structured and targeted introduction to R, focusing on the topics most relevant for actuarial applications.
 
--   Build and analyze actuarial models using R.
--   Apply statistical methods to pricing, reserving, and risk management.
--   Interpret and visualize data to inform key business decisions.
--   Use predictive analytics to forecast trends and outcomes.
+### Learning Objectives
 
-## Prerequisites
+By the end of this course, participants will be able to:
 
-This program is designed for both aspiring and experienced actuaries who want to deepen their expertise in data analysis and programming.
+-   Understand the essential R topics for actuarial exams.
+-   Learn how to structure a short R module for exam preparation.
+-   Gain ready-to-use teaching materials (cheat sheet, Quarto template, exercises with solutions).
+-   Explore strategies to improve coding effectively under exam conditions.
 
--   Basic knowledge of actuarial and statistics concepts
--   Basic knowledge of programming
+### Prerequisites
 
-## Course Outline
+This program is designed for both aspiring and experienced actuaries who want to deepen their expertise in data analysis and programming:
 
-The course is divided in two sessions of 2 hours each. The first session will cover the basics of R programming, while the second session will focus on predictive modeling.
+-   Basic Knowledge of Probability and Statistics – familiarity with descriptive statistics, probability distributions, and regression concepts.
+-   Actuarial Exam Foundations – prior exposure to material from preliminary exams such as P (Probability) and FM (Financial Mathematics).
+-   Basic Computing Skills – ability to navigate a computer environment and install software; no prior programming experience required.
 
-### Day 1: Introduction to R
+### Course Outline
 
--   Introduction to R
--   Data types and structures
--   Example 1: Data simulation and visualization
--   Example 2: Data manipulation and visualization
+This two-hour R-crash course will cover the basics of R programming, with a focus on practical applications relevant to actuarial exams.
 
-### Day 2: Predictive Modeling
+-   [Introduction to R](/01_introduction_to_r.html)
+-   [Data types and structures](/02_data_types_and_structures.html)
+-   Example 1: [Data manipulation and visualization](/03_data_manipulation_and_visualization.html)
+-   Example 2: [Predictive modeling](/04_predictive_modeling.html)
+-   Example 3: [Clustering](/05_clustering.html)
 
--   Introduction to Predictive Modeling
--   Example 1: Linear Regression
--   Example 2: Generalized Additive Models
--   Final Project Outline
+### Course Materials
 
-## Course Materials
+-   Slides and compressed files: <https://www.actuarialuniversity.com/seminar/View/15335>
+-   Github repository: <https://github.com/Fgazzelloni/ACTEX_2025>
+-   Booklet: <https://github.com/Fgazzelloni/ACTEX_2025>
 
--   Slides and compressed files: <https://www.actuarialuniversity.com/seminar/View/14826>
--   Github repository: <https://github.com/Fgazzelloni/ACTEX_october2024>
--   Resources at the end of each lesson.
+## About the Providers
 
-## Course Evaluation
+[ACTEX Learning](https://www.actexlearning.com/) is a long-established leader in actuarial exam preparation, best known for its high-quality study manuals and adaptive learning tools. Their resources are branded with confidence: **"Empowering Actuarial Students. Proven Results."** Their materials are designed for flexibility, allowing learners to study at their own pace and engage with interactive elements such as video lectures and GOAL practice tools—**"Guided Online Actuarial Learning"**—which offers exam-style questions across varied difficulty levels. Many professors also endorse ACTEX materials, relying on their structured content and pass-focused approach.
 
-Final Project (100%) - The final project will be a data analysis project that will require students to apply the concepts learned in the course.
-:::::
+[Actuarial University](https://www.actuarialuniversity.com/), powered by **ACTEX** and [Mad River Books](https://www.actexmadriver.com/), serves as a centralized learning platform tailored specifically for students and instructors. Through a unified login experience, users gain access to study materials, e-books, GOAL practice sets, and exam dashboards customized for numerous actuarial exams. The platform is designed for ease of use—offering topic indexing, planner tools, and instructor-friendly features that support seamless integration into actuarial courses.
